<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signup_backgrand"
    tools:context="com.shuzhongchen.foodordersystem.activities.SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical"
        android:id="@+id/linearLayout">

        <EditText
            android:id="@+id/edtFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/first_name"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:backgroundTint="@android:color/transparent"/>

        <EditText
            android:id="@+id/edtLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:layout_weight="1"
            android:hint="@string/last_name" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@android:color/transparent"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:hint="@string/email_address" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textPassword"
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/password"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@android:color/white"
            android:text="@string/register"
            android:textSize="20sp"
            android:textColor="@color/btnSignUp"/>


    </LinearLayout>

    <ProgressBar
        android:id="@+id/logInBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"/>




</RelativeLayout>
