<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:id="@+id/menu_card"
    android:layout_width="match_parent"
    android:layout_height="165dp"
    android:layout_margin="7dp"
    android:background="@drawable/login_background"
    card_view:cardCornerRadius="7dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Popularity:" />

            <TextView
                android:id="@+id/popularity_sort_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="30dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/name" />

            <TextView
                android:id="@+id/name_sort_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="30dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/category" />

            <TextView
                android:id="@+id/category_sort_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="30dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/unit_price" />

            <TextView
                android:id="@+id/unitprice_sort_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="30dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="0dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/calories" />

            <TextView
                android:id="@+id/calories_sort_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="30dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/prepTime" />

            <TextView
                android:id="@+id/preptime_sort_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="30dp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

    </LinearLayout>

</android.support.v7.widget.CardView>
